<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_top_start"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:minWidth="48dp"
            android:gravity="start|center_vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/scaffold_cancel"
            android:textColor="?attr/colorOnSurface" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/scaffold_date_picker_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_top_end"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:minWidth="48dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/scaffold_ok"
            android:textColor="?attr/colorOnSurface"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        tools:ignore="HardcodedText">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ig_gl_ym"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ig_gl_md"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ig_gl_tw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="36dp" />

        <View
            android:id="@+id/ig_divider_ym"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:alpha="0.1"
            android:background="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ig_gl_ym"
            app:layout_constraintStart_toStartOf="@id/ig_gl_ym"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ig_divider_md"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:alpha="0.1"
            android:background="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ig_gl_md"
            app:layout_constraintStart_toStartOf="@id/ig_gl_md"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scaffold_year_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ig_gl_tw"
            app:layout_constraintEnd_toStartOf="@id/ig_divider_ym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scaffold_month_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ig_gl_tw"
            app:layout_constraintEnd_toStartOf="@id/ig_divider_md"
            app:layout_constraintStart_toEndOf="@id/ig_divider_ym"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scaffold_day_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ig_gl_tw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ig_divider_md"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:alpha="0.1"
            android:background="@drawable/scaffold_bg_primary_rounding_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/ig_gl_tw" />

        <!-- We transform the RecyclerView to Wheel, in java/kotlin; it's magic  -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_year"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ig_divider_ym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ig_gl_tw"
            tools:listitem="@layout/scaffold_cell_text_on_bottom_wheel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_month"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ig_divider_md"
            app:layout_constraintStart_toEndOf="@id/ig_divider_ym"
            app:layout_constraintTop_toBottomOf="@id/ig_gl_tw"
            tools:listitem="@layout/scaffold_cell_text_on_bottom_wheel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_day"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ig_divider_md"
            app:layout_constraintTop_toBottomOf="@id/ig_gl_tw"
            tools:listitem="@layout/scaffold_cell_text_on_bottom_wheel" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
